--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@
 /.pnp
 .pnp.js
 
+# yarn 2+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+
 # testing
 /coverage
 
