--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
   "name": "react-testing",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
+  "author": {
+    "name": "Alex Poleschuk",
+    "email": "imalexp@ya.ru"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AlexPoleschuk/react-testing"
+  },
+  "license": "UNLICENSED",
+  "packageManager": "yarn@4.0.2",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,12 +31,6 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
