--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-testing",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "private": true,
   "author": {
     "name": "Alex Poleschuk",
@@ -18,18 +18,25 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.64",
+  "peerDependenciesMeta": {
+    "@testing-library/dom": {
+      "optional": true
+    }
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.9.4",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
+    "typescript": "^5.2.2",
+    "web-vitals": "^2.1.4"
+  },
+  "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   }
 }
