--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "license": "UNLICENSED",
   "packageManager": "yarn@4.0.2",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "jest"
+    "test": "run-p \"test:*\"",
+    "test:jest": "jest"
   },
   "peerDependenciesMeta": {
     "@testing-library/dom": {
@@ -43,15 +42,14 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-dom": "^18.2.0"
   }
 }
