--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-testing",
-  "version": "0.3.0",
+  "version": "1.0.0",
   "private": true,
   "author": {
     "name": "Alex Poleschuk",
@@ -13,8 +13,8 @@
   "license": "UNLICENSED",
   "packageManager": "yarn@4.0.2",
   "scripts": {
-    "test": "run-p \"test:*\"",
-    "test:jest": "jest"
+    "test": "run-p --aggregate-output \"test:*\"",
+    "test:rtl": "jest \"src/__tests__/rtl\""
   },
   "peerDependenciesMeta": {
     "@testing-library/dom": {
@@ -34,19 +34,23 @@
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/jest": "^29.5.10",
-    "@types/node": "^20.9.4",
+    "@types/node": "^20.9.5",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "@types/react-test-renderer": "^18",
+    "axios": "^1.6.2",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
+    "msw": "^1",
     "npm-run-all": "^4.1.5",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "5.2.2",
+    "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
     "react": "^18.2.0",
