--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,23 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "plugins": [
+      {
+        "transform": "typescript-transform-paths"
+      }
+    ]
   },
   "include": [
-    "src"
-  ]
+    "src/**/*"
+  ],
+  "files": [
+    "globals.d.ts"
+  ],
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ],
+    "files": true
+  }
 }
