--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-testing",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "author": {
     "name": "Alex Poleschuk",
@@ -14,7 +14,8 @@
   "packageManager": "yarn@4.0.2",
   "scripts": {
     "test": "run-p --aggregate-output \"test:*\"",
-    "test:rtl": "jest \"src/__tests__/rtl\""
+    "test:rtl": "jest \"src/__tests__/rtl\"",
+    "test:rtr": "jest \"src/__tests__/testRenderer\""
   },
   "peerDependenciesMeta": {
     "@testing-library/dom": {
